--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Webseitenbezeichnung  </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" -->type="text/css"--< href="style.css">
 
 </head>
 
@@ -27,5 +27,11 @@
 <h2><center><img src="ontology-logo-on-black-1-770x433.jpg" height="300px"; width="700px"; /></center></h2>
 
 </div>
+
+ <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+ <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+ <script type="text/javascript">
+
 </body>
 </html>
