--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Webseitenbezeichnung  </title>
-<link rel="stylesheet" -->type="text/css"--< href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -23,6 +23,7 @@
 </ul>
 
 <div id="div2">
+
 <h1>SPARQL-Querys</h1>
 <h2><center><img src="ontology-logo-on-black-1-770x433.jpg" height="300px"; width="700px"; /></center></h2>
 
